--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -4,3 +4,9 @@
 @import "base/_mixins";
 @import "modules/_container";
 @import "modules/_btn";
+@import "modules/_header";
+@import "modules/_wrapper";
+@import "modules/_box";
+@import "modules/_page-section";
+@import "modules/_hero";
+@import "modules/_headline";
