tried to fix my layout issues

--- a/app/assets/styles/base/_variables.css
+++ b/app/assets/styles/base/_variables.css
@@ -1,3 +1,5 @@
 $lightBlue: rgba(227, 233, 239, 1);
-$darkBlue: rgba(72, 92, 111, 1);
+$darkBlue: rgba(39, 70, 162, 1);
+$medGray: rgba(192, 192, 192, 1);
+$golden: rgba(255, 215, 0);
 $mainOrange: #d59541;
