--- a/app/assets/styles/modules/_box.css
+++ b/app/assets/styles/modules/_box.css
@@ -1,14 +1,21 @@
 .box {
   color: #000;
-  padding: 0.75rem;
+  padding: 0.75em;
+  border: 1px solid black;
+  border-radius: 5px;
 
   &--white {
     background-color: #fff;
   }
 
-  &--inline {
+  &--medGray {
+    background-color: $medGray;
+    color: #444;
+  }
+
+  /*&--inline {
     @mixin atMedium {
       display: inline-block;
-    }    
-  }
+    }
+  }*/
 }
