--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -10,3 +10,5 @@
 @import "modules/_page-section";
 @import "modules/_hero";
 @import "modules/_headline";
+@import "modules/_row";
+@import "modules/_text";
